# GGUF-Quantizer

./: .gitignore  README.md  process.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh  test_low_ram.py
core/: llama-arch.cpp  llama-model.cpp
patches/: 0001-ggml-max-name.patch  0001-llama-arch.patch  0002-llama-arch.patch  0003-llama-model-loader-tolerant.patch  0003-llama-model-quant.patch  0004-llama-model-loader-tolerant.patch  PATCHES.md
quantizer/: quantizer.py
tools/: apply_lts_fix.py  convert.py  extract_components.py  inspect_tensors.py  model_scanner.py
